syntax = "proto3";

package protocol;

import "databatch.proto";
import "table_data.proto";

message QueryResult {
  Query query_id = 1;
  TableSchema schema = 2;
  repeated Row rows = 3;
}
